<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.suwan.course.TestThree.SPActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_text"
        android:textSize="18sp"
        android:id="@+id/textview1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_bg"
        android:id="@+id/edittext1"
        android:layout_below="@+id/textview1"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext1"
        android:layout_marginTop="20dp"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:background="@drawable/button_submit"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_marginTop="20dp"
        android:id="@+id/get_info"
        android:text="@string/get_info"
        android:background="@drawable/button_submit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/get_info"
        android:id="@+id/info_title"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="20"
        android:text="@string/info_detail"
        android:layout_below="@+id/info_title"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:id="@+id/info_detail"/>

</RelativeLayout>
