<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.suwan.course.TestTwo.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:layout_marginTop="65dp"
        android:hint="@string/user_name"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/user_pwd"
        android:id="@+id/user_pwd"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_pwd"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_submit"
        android:id="@+id/login"
        android:text="@string/please_login"/>


</RelativeLayout>
