<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.suwan.course.TestFour.CompareActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/show_info"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/first_input_number"
        android:layout_marginTop="77dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/second_input_number"
        android:layout_marginRight="77dp"
        android:layout_marginEnd="77dp"
        android:layout_alignTop="@+id/first_input_number"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/button"
        android:background="@drawable/button_submit"
        android:layout_above="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="34dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:text="@string/button1"
        android:background="@drawable/button_submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="105dp" />

</RelativeLayout>
